<resources>
    <string name="app_name">ConfApp</string>
    <string name="title_activity_main">Conf App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Scan QR</string>
    <string name="text_login">Login</string>
    <string name="text_profile">Profile</string>
    <string name="text_activityFeed">Activity feed</string>
    <string name="text_schedule">Schedule</string>
    <string name="text_about">About</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="text_noConnection">Please connect to the internet</string>
    <string name="content_desc_ic_wifi">WIFI icon</string>
    <string name="textPlaceholder_eventName">Event name placeholder</string>
    <string name="textPlaceholder_eventTime">09:00 CET +01:00</string>
    <string name="textPlaceholder_eventDuration">09:00 - 10:15</string>
    <string name="textPlaceholder_eventLocation">Hall name placeholder</string>
    <string name="textPlaceholder_weekName">Week n</string>
    <string name="textPlaceholder_currentDay">20</string>
    <string name="textHolder_currentMonth">Feb</string>
    <string name="textPlaceholder_currentWeekday">Mon</string>
    <string name="contentDesc_arrowRight">"Right arrow icon"</string>
    <string name="contentDesc_arrowLeft">Left arrow icon</string>
    <string name="button_select_image_registration">Select Image</string>
    <string name="edittext_username_hint_registration">Username</string>
    <string name="edittext_email_hint_registration">Email</string>
    <string name="edittext_password_hint_registration">Password</string>
    <string name="button_register_registration">REGISTER</string>
    <string name="textview_already_have_an_account_registration">Already have an account?</string>
    <string name="button_log_in_login">LOG IN</string>
    <string name="textview_back_to_registration_login">New? Sign up here!</string>
    <string name="sign_out_text">Sign out</string>
    <string name="text_tryConnection">Try again</string>
    <string name="title_activity_event_scrolling">EventScrollingActivity</string>
    <string name="text_about_event">About This Event</string>
    <string name="text_event_name">Name*</string>
    <string name="placeholder_event_name">Event</string>
    <string name="text_event_date">Start Date*</string>
    <string name="placeholder_event_date">dd/mm/yyyy</string>
    <string name="text_event_duration">Duration (in minutes)*</string>
    <string name="placeholder_event_duration">45</string>
    <string name="text_event_hall">Location/hall*</string>
    <string name="placeholder_event_location">Hall X52</string>
    <string name="text_event_type">Event Type*</string>

    <string name="event_type_prompt">Choose a type</string>
    <string name="text_add_presenters">Add presenters</string>
    <string name="text_add_event">Add event</string>
    <string name="text_event_time">Starting Time*</string>
    <string name="placeholder_event_time">hh:mm</string>

    <string-array name="type_arrays">
        <item>Workshop</item>
        <item>Presentation</item>
        <item>Q&amp;A</item>
    </string-array>

    <string-array name="hall_array">
        <item>Hall 1</item>
        <item>Hall 2</item>
        <item>Hall 3</item>
        <item>Hall 4</item>
        <item>Hall 5</item>
    </string-array>

    <string name="event_notification_channel_description">This event is starting soon</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confDates">20 - 25 July 2019</string>
    <string name="confDescription">A five-day conference designed just for you, the developers! With all-day
        events such as educational and inspirational speeches, panel discussions, lectures and workshops led by experts
        industry-wide networking events have also been organized. Of course, all that
        content requires free coffee flowing in streams. For those who like to go to conferences primarily
        for the sake of food, and only then, for the sake of new knowledge, have we prepared top-notch catering that no one can stay with
        uninterested! See you in Rijeka!
    </string>
    <string name="title_activity_maps">Map</string>
    <string name="write_a_comment">Write a comment...</string>
    <string name="sendComment">send</string>
    <string name="contentDescriptionUploadedImage">uploaded image</string>
    <string name="contentDescription_image_in_comment">Image in comment</string>

    <string name="maps_api_key">
        AIzaSyDy-Efv37oOprCICK4TsGg8qUvfdHS0rtk
    </string>
    <string name="remove_comment">Remove comment</string>

    <string name="user_role">User role</string>
    <string name="user_name">Name</string>
    <string name="registration_date">Registration date</string>
    <string name="user_email">Email</string>
    <string name="user_avatar">User avatar</string>

    <string name="about">About</string>
    <string name="comments">Comments</string>
    <string name="lecturers">Lecturers</string>

</resources>
