<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        >
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/stock_auditorium_benches_board"
            android:id="@+id/imageView" android:adjustViewBounds="true"
            android:layout_marginBottom="@dimen/margin_large"
            android:focusable="true"
            android:focusableInTouchMode ="true"/>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fragment_newEvent"
        android:background="@android:color/white"
        android:focusableInTouchMode="true"
        android:clickable="true"
        android:focusable="true">
        <TableRow android:layout_width="match_parent" android:layout_height="wrap_content" android:weightSum="1"
                  android:layout_marginBottom="@dimen/margin_large">
            <TextView
                    android:text="@string/text_event_name"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/textView_eventName"
                    style="@style/TextViewLabel"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:inputType="textPersonName"
                    android:id="@+id/editText_eventName"
                    style="@style/TextViewInput"
                    android:hint="@string/placeholder_event_name"/>
        </TableRow>
        <TableRow android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:weightSum="1" android:layout_marginBottom="@dimen/margin_large">
            <TextView
                    android:text="@string/text_event_date"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/textView_eventDate"
                    style="@style/TextViewLabel"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:inputType="none"
                    android:id="@+id/editText_eventDate"
                    style="@style/TextViewInput" android:hint="@string/placeholder_event_date"/>
        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:layout_marginBottom="@dimen/margin_large">
            <TextView
                    android:text="@string/text_event_time"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" android:id="@+id/textView_eventTime" style="@style/TextViewLabel"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:ems="10"
                    android:id="@+id/editText_eventTime"
                    style="@style/TextViewInput"
                    android:hint="@string/placeholder_event_time"/>
        </TableRow>
        <TableRow android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:weightSum="1" android:layout_marginBottom="@dimen/margin_large">
            <TextView
                    android:text="@string/text_event_duration"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/textView_eventDuration"
                    style="@style/TextViewLabel"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:inputType="numberSigned"
                    android:ems="10"
                    android:id="@+id/editText_eventDuration"
                    style="@style/TextViewInput" android:hint="@string/placeholder_event_duration"/>
        </TableRow>
        <TableRow android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:weightSum="1" android:layout_marginBottom="@dimen/margin_large">
            <TextView
                    android:text="@string/text_event_hall"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/textView_eventHall"
                    style="@style/TextViewLabel"/>
            <Spinner
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/spinner_eventHall"
                    style="@style/TextViewInput"
                    android:entries="@array/hall_array"
            />

        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1" android:layout_marginBottom="@dimen/margin_large">
            <TextView
                    android:text="@string/text_event_type"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/textView_eventType"
                    style="@style/TextViewLabel"/>
            <Spinner
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/spinner_eventType"
                    style="@style/TextViewInput"
                    android:prompt="@string/event_type_prompt"
                    android:entries="@array/type_arrays"/>
        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:weightSum="1"
                android:layout_marginBottom="@dimen/margin_large">
            <TextView
                    android:text="@string/text_about"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/textView_aboutEvent"
                    style="@style/TextViewLabel"
                    android:layout_weight="0.3"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:ems="10"
                    android:id="@+id/editText_aboutEvent"
                    style="@style/TextViewInput"
                    android:hint="@string/text_about_event"
                    android:singleLine="false"
                    android:maxLength="300"
                    android:maxLines="5"
                    android:ellipsize="end"
                    android:layout_weight="0.7"/>
        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center" android:layout_marginBottom="@dimen/margin_large">
            <Button
                    android:text="@string/text_add_presenters"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_addPresenters" style="@style/TextViewLabel" android:gravity="center"
                    android:layout_marginEnd="@dimen/margin_large" android:background="@color/blue"
                    android:textColor="@android:color/white"/>
        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <Button
                    android:text="@string/text_add_event"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/button_addEvent" style="@style/TextViewLabel"
                    android:gravity="center" android:background="@color/darkBlue" android:textColor="@android:color/white"
                    android:layout_marginEnd="@dimen/margin_large"/>
        </TableRow>

    </TableLayout>
    </ScrollView>
</LinearLayout>