<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_event_scrolling"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".event.EventScrollingActivity"
        >
    <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:clickable="true"
            android:focusable="true"
    >
        <com.airbnb.lottie.LottieAnimationView android:layout_width="match_parent"
                                               android:layout_height="300dp"
                                               app:lottie_loop="true"
                                               app:lottie_autoPlay="true"
                                               android:layout_centerInParent="true"
                                               app:lottie_fileName="loading-dots.json"
                                               android:id="@+id/event_scrolling_activity_progress_bar_content"/>
        <!--<ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/event_scrolling_activity_progress_bar_content" android:layout_centerInParent="true"/>-->
        <TextView android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:text="@string/about"
                  android:textSize="20sp"
                  android:textColor="@color/darkBlue"
                  android:textStyle="bold"
                  android:id="@+id/about_label"
                  android:paddingStart="10dp"
                  android:paddingTop="10dp"
        />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView_aboutEvent"
                android:lineSpacingExtra="@dimen/smallest_spacing"
                android:layout_marginBottom="@dimen/text_margin"
                android:textSize="@dimen/textSize_medium"
                android:padding="10dp"
                android:textColor="@color/darkBlue"
                android:layout_below="@+id/about_label"/>

        <TextView android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:text="@string/lecturers"
                  android:textSize="20sp"
                  android:textColor="@color/darkBlue"
                  android:textStyle="bold"
                  android:id="@+id/lecturer_label"
                  android:layout_below="@+id/textView_aboutEvent"
                  android:paddingStart="10dp"
                  android:paddingTop="10dp"
                  android:paddingBottom="10dp"
        />

        <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerView_eventExhibitors"
                android:layout_below="@+id/lecturer_label"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
        />

        <TextView android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:text="@string/comments"
                  android:textSize="20sp"
                  android:textColor="@color/darkBlue"
                  android:textStyle="bold"
                  android:id="@+id/comments_label"
                  android:layout_below="@+id/recyclerView_eventExhibitors"
                  android:paddingStart="10dp"
                  android:paddingTop="20dp"
        />


        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:id="@+id/comments_container"
                      android:layout_below="@id/comments_label"
                      android:orientation="vertical">

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="vertical"
                          android:id="@+id/linearLayout_uploadedImageContainer"
                          android:layout_gravity="start">


                <ImageView android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_gravity="start"
                           android:paddingBottom="6dp"
                           android:id="@+id/imageView_uploadedImage"
                           android:contentDescription="@string/contentDescriptionUploadedImage"/>
            </LinearLayout>

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="match_parent"
                          android:orientation="horizontal"
                          android:id="@+id/writeACommentContainer"
                          android:paddingStart="6dp"
                          android:paddingEnd="6dp"

                          android:layout_gravity="bottom"
                          android:weightSum="1">
                <EditText android:layout_width="0dp"
                          android:layout_height="wrap_content"
                          android:layout_weight="0.77"
                          android:hint="@string/write_a_comment"
                          android:id="@+id/editText_comment"
                          android:maxLines="5"
                          android:inputType="textCapSentences|textAutoCorrect|textMultiLine"
                          android:maxLength="150"
                          android:imeOptions="actionDone"
                />
                <Button android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.13"
                        android:gravity="bottom"
                        android:layout_gravity="bottom"
                        android:id="@+id/button_uploadImage"
                        android:background="@android:drawable/ic_menu_camera"

                />

                <Button android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.1"
                        android:gravity="bottom"
                        android:layout_gravity="bottom"
                        android:id="@+id/button_sendComment"
                        android:background="@drawable/ic_arrow_right_grayed"
                        android:backgroundTint="@color/lightBlue"/>

            </LinearLayout>


            <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerView_comments"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
            />

            <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/darkestBlue"
                    android:layout_marginBottom="6dp"
            />

        </LinearLayout>




    </RelativeLayout>
</android.support.v4.widget.NestedScrollView>